--- a/index.html
+++ b/index.html
@@ -4,16 +4,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
-        integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
-        crossorigin="anonymous" /> -->
     <link rel="stylesheet" href="style.css">
-    <title>My Project</title>
+
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet">
+    <script src="script.js" defer></script>
+    <title>Image Slider</title>
 </head>
 
 <body>
-    <h1>Project Starter</h1>
-    <script src="script.js"></script>
+    <div class="carousel-container">
+        <div class="carousel-slide">
+            <img id="lastClone" src="./assets/dale-gauntt-1trkVW1I47s-unsplash.jpeg" alt="">
+
+            <img src="./assets/nils-leonhardt-YeBI31kK2_4-unsplash.jpeg" alt="">
+
+            <img src="./assets/quino-al-mBQIfKlvowM-unsplash.jpeg" alt="">
+
+            <img src="./assets/mark-autumns-Ssr26I0QWVY-unsplash.jpeg" alt="">
+
+            <img src="./assets/rajudin-hax-7bN-W2xONP4-unsplash.jpeg" alt="">
+
+            <img src="./assets/dale-gauntt-1trkVW1I47s-unsplash.jpeg" alt="">
+
+            <img id="firstClone" src="./assets/nils-leonhardt-YeBI31kK2_4-unsplash.jpeg" alt="">
+        </div>
+        <div class="btn-container">
+            <button id="prev"><span class="material-icons-outlined">
+                    arrow_back_ios
+                </span></button>
+            <button id="next"><span class="material-icons-outlined">
+                    arrow_forward_ios
+                </span></button>
+        </div>
+    </div>
+
 </body>
 
 </html>
